# rustty

./: .gitignore  Cargo.toml  README.md  découpage.md
src/: config.rs  login.rs  main.rs  messages.rs  models.rs  ssh.rs  ui.rs
src/ui/: constants.rs  dashboard.rs  login.rs  mod.rs  terminal.rs  theme.rs  views.rs
src/ui/components/: actions.rs  actions_bar.rs  brand.rs  forms.rs  mod.rs  search_table.rs  sidebar.rs  table.rs
src/ui/views/: mod.rs
src/ui/views/login/: auth.rs  general.rs  mod.rs  theme.rs  themes.rs
testrust_simpleterm/: Cargo.toml
testrust_simpleterm/src/: main.rs
testrust_termnano/: Cargo.toml
testrust_termnano/src/: main.rs
