[package]
name = "putty-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio", "multi-window"] }
russh = "0.45.0"
russh-keys = "0.40"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0" # Pour trouver le dossier "AppData" ou ".config" proprement