[package]
name = "rustty"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio", "multi-window", "image"] }
russh = "0.45.0"
russh-keys = "0.40"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# On utilise la v4 pour générer des IDs aléatoires et la feature serde pour le JSON
uuid = { version = "1.10", features = ["v4", "serde"] }
# Aide à trouver le dossier "AppData" ou ".config" proprement
directories = "5.0"
ansitok = "0.2" # Parseur ANSI très simple et efficace
vt100 = "0.15" # terminal byte stream and provides an in-memory representation of the rendered contents (ANSI code, vim, ...).
